crates/nash-codegen/src/snapshots/nash_codegen__unused_params_pre_anf_tests__divergent_argument.snap
---
source: crates/nash-codegen/src/unused_params_pre_anf_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after))"
---
--- core before
let helper#2 : int -> int = \p#1 : int -> 42 in
helper#2 (letrec
  loop#4 : int -> int [static []] = \n#3 : int -> loop#4 n#3
in
loop#4 0)
--- core after
let helper#2 : @delay int = delay 42 in
let arg#5 : int = letrec
  loop#4 : int -> int [static []] = \n#3 : int -> loop#4 n#3
in
loop#4 0 in
force helper#2
