crates/nash-codegen/src/snapshots/nash_codegen__unused_params_pre_anf_tests__fresh_type_views.snap
---
source: crates/nash-codegen/src/unused_params_pre_anf_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after))"
---
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
helper#3 (trace "unused" in 0) (addInteger external#4 1)
--- core after
let helper#3 : int -> int = \used#2 : int -> used#2 in
let arg#5 : int = trace "unused" in 0 in
let arg#6 : bytes = addInteger external#4 1 in
helper#3 arg#6
